fix pull to refresh on mobile devices 3

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -22,6 +22,7 @@
     -webkit-text-size-adjust: 100%;
     @include max-devices(md){
         user-zoom: fixed;
+        overscroll-behavior: none;
     }
 }
 
@@ -41,9 +42,7 @@ body {
     min-height: 100vh;
     width: 100%;
     background-color: #F7F7F0;
-    @include max-devices(md){
-        overscroll-behavior: none;
-    }
+
 }
 
 *, *::before, *::after {
